--- a/main/package.json
+++ b/main/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "babel-plugin-component": "^1.1.1",
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.14",
     "qiankun": "^2.10.16",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
